...
                        android:layout_margin="@dimen/linearlayout_activity_global_settings_download_external_storage_margin"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:orientation="horizontal">

                        <com.google.android.material.switchmaterial.SwitchMaterial
                            android:id="@+id/switch_activity_global_settings_download_external_storage"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:trackTint="@drawable/switchtrack_selector"
                            app:thumbTint="@drawable/switchthumb_selector"
                            android:showText="false" />

                        <TextView
                            android:id="@+id/textview_activity_global_settings_download_external_storage_on_off"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:text="" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardview_activity_global_settings_download_folder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/cardview_activity_global_settings_download_folder_margin"
                app:cardCornerRadius="@dimen/cardview_activity_global_settings_download_folder_corner_radius"
                app:cardElevation="@dimen/cardview_activity_global_settings_download_folder_card_elevation">

...
                        android:layout_margin="@dimen/linearlayout_activity_global_settings_download_folder_margin"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textview_activity_global_settings_download_folder"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="normal"
                            android:textColor="@drawable/edittext_selector"
                            android:text="" />

...
                        android:layout_margin="@dimen/linearlayout_activity_global_settings_log_file_margin"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:orientation="horizontal">

                        <com.google.android.material.switchmaterial.SwitchMaterial
                            android:id="@+id/switch_activity_global_settings_log_file"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:trackTint="@drawable/switchtrack_selector"
                            app:thumbTint="@drawable/switchthumb_selector"
                            android:showText="false" />

                        <TextView
                            android:id="@+id/textview_activity_global_settings_log_file_on_off"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:text="" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardview_activity_global_settings_log_folder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/cardview_activity_global_settings_log_folder_margin"
                app:cardCornerRadius="@dimen/cardview_activity_global_settings_log_folder_corner_radius"
                app:cardElevation="@dimen/cardview_activity_global_settings_log_folder_card_elevation">

...
                        android:layout_margin="@dimen/linearlayout_activity_global_settings_log_folder_margin"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textview_activity_global_settings_log_folder"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="normal"
                            android:textColor="@drawable/edittext_selector"
                            android:text="" />

...
